[package]
name = "codex-compiler"
version = "0.1.0"
edition = "2021"
description = "Fast grammar-verification compiler for C, C++, and Java"

[[bin]]
name = "codexc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
colored = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
